--- a/.github/workflows/validate-and-test.yml
+++ b/.github/workflows/validate-and-test.yml
@@ -55,8 +55,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        SCALA_VERSION: [2.12, 2.13]
-        JABBA_JDK: [1.8, 1.11]
+        SCALA_VERSION: [2.13] # [2.12, 2.13]
+        JABBA_JDK: [1.8] #[1.8, 1.11]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
