--- a/.github/workflows/validate-and-test.yml
+++ b/.github/workflows/validate-and-test.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Install sbt
         uses: coursier/setup-action@v1
+        with:
+          apps: sbt
 
       - name: Cache Build Target
         uses: actions/cache@v2
