debug sbt script

--- a/.github/workflows/validate-and-test.yml
+++ b/.github/workflows/validate-and-test.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           apps: sbt
 
+      - run: |-
+          whereis sbt
+          cat `whereis sbt`
+
       - name: Cache Build Target
         uses: actions/cache@v2
         with:
