--- a/.github/workflows/validate-and-test.yml
+++ b/.github/workflows/validate-and-test.yml
@@ -16,8 +16,6 @@ jobs:
     name: Checks
     runs-on: ubuntu-latest
     if: github.repository == 'jrudolph/incubator-pekko-http'
-    env:
-      SBT_OPTS: --javaHome /usr/lib/jvm/temurin-8-jdk-amd64
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -42,7 +40,7 @@ jobs:
           key: build-target-${{ hashFiles('**/*.sbt', 'project/build.properties', 'project/**/*.scala') }}
 
       - name: Check headers
-        run: /home/runner/cs/bin/sbt headerCheckAll
+        run: sbt -java-home /usr/lib/jvm/temurin-8-jdk-amd64 headerCheckAll
 
       - name: Check for missing formatting
         run: git diff --exit-code --color
