try using right path

--- a/.github/workflows/validate-and-test.yml
+++ b/.github/workflows/validate-and-test.yml
@@ -28,6 +28,12 @@ jobs:
         with:
           apps: sbt
 
+      - name: Select Java version
+        run: |-
+          echo "PATH=$JAVA_HOME_8_X64/bin:$PATH" >> $GITHUB_ENV
+
+      - run: |-
+          java -version
 #      - run: |-
 #          whereis sbt
 #          cat /home/runner/cs/bin/sbt
@@ -40,7 +46,7 @@ jobs:
           key: build-target-${{ hashFiles('**/*.sbt', 'project/build.properties', 'project/**/*.scala') }}
 
       - name: Check headers
-        run: sbt -java-home /usr/lib/jvm/temurin-8-jdk-amd64 headerCheckAll
+        run: sbt headerCheckAll
 
       - name: Check for missing formatting
         run: git diff --exit-code --color
