--- a/.github/workflows/validate-and-test.yml
+++ b/.github/workflows/validate-and-test.yml
@@ -18,10 +18,10 @@ jobs:
     if: github.repository == 'jrudolph/incubator-pekko-http'
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Cache Coursier cache
-        uses: coursier/cache-action@v6.2
+        uses: coursier/cache-action@v6
 
       - name: Install sbt
         uses: coursier/setup-action@v1
@@ -31,13 +31,6 @@ jobs:
       - name: Select Java version
         run: |-
           echo "PATH=$JAVA_HOME_8_X64/bin:$PATH" >> $GITHUB_ENV
-
-      - run: |-
-          java -version
-#      - run: |-
-#          whereis sbt
-#          cat /home/runner/cs/bin/sbt
-#          /home/runner/cs/bin/sbt -h
 
       - name: Cache Build Target
         uses: actions/cache@v2
@@ -62,25 +55,27 @@ jobs:
   compile-and-test:
     name: Compile and test
     runs-on: ubuntu-latest
-    if: github.repository == 'apache/incubator-pekko-http'
+    if: github.repository == 'jrudolph/incubator-pekko-http'
     strategy:
       fail-fast: false
       matrix:
         SCALA_VERSION: [2.12, 2.13]
-        JABBA_JDK: [1.8, 1.11]
+        JDK_VERSION: [8, 11]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Set up JDK ${{ matrix.JABBA_JDK }}
-        uses: olafurpg/setup-scala@v10
-        with:
-          java-version: adopt@${{ matrix.JABBA_JDK }}
+        uses: actions/checkout@v3
 
       - name: Cache Coursier cache
-        uses: coursier/cache-action@v6.2
+        uses: coursier/cache-action@v6
+
+      - name: Install sbt
+        uses: coursier/setup-action@v1
+        with:
+          apps: sbt
+
+      - name: Select Java version ${{ matrix.JDK_VERSION }}
+        run: |-
+          echo "PATH=$JAVA_HOME_${{ matrix.JDK_VERSION }}_X64/bin:$PATH" >> $GITHUB_ENV
 
       - name: Cache Build Target
         uses: actions/cache@v2
@@ -92,12 +87,12 @@ jobs:
         run: sbt ++${{ matrix.SCALA_VERSION }} Test/compile
 
       # Quick testing for PR validation
-      - name: Validate pull request for JDK ${{ matrix.JABBA_JDK }}, Scala ${{ matrix.SCALA_VERSION }}
+      - name: Validate pull request for JDK ${{ matrix.JDK_VERSION }}, Scala ${{ matrix.SCALA_VERSION }}
         if: ${{ github.event_name == 'pull_request' }}
         run: sbt -Dakka.http.parallelExecution=false -Dakka.test.timefactor=2 ++${{ matrix.SCALA_VERSION }} validatePullRequest
 
       # Full testing for pushes
-      - name: Run all tests JDK ${{ matrix.JABBA_JDK }}, Scala ${{ matrix.SCALA_VERSION }}
+      - name: Run all tests JDK ${{ matrix.JDK_VERSION }}, Scala ${{ matrix.SCALA_VERSION }}
         if: ${{ github.event_name == 'push' }}
         run: sbt -Dakka.http.parallelExecution=false -Dakka.test.timefactor=2 ++${{ matrix.SCALA_VERSION }} mimaReportBinaryIssues test
 
