--- a/.github/workflows/validate-and-test.yml
+++ b/.github/workflows/validate-and-test.yml
@@ -48,12 +48,12 @@ jobs:
   compile-and-test:
     name: Compile and test
     runs-on: ubuntu-latest
-    if: github.repository == 'apache/incubator-pekko-http'
+    if: github.repository == 'jrudolph/incubator-pekko-http'
     strategy:
       fail-fast: false
       matrix:
-        SCALA_VERSION: [2.12, 2.13]
-        JABBA_JDK: [1.8, 1.11]
+        SCALA_VERSION: [2.13]
+        JABBA_JDK: [1.8]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -75,7 +75,7 @@ jobs:
           key: build-target-${{ hashFiles('**/*.sbt', 'project/build.properties', 'project/**/*.scala') }}
 
       - name: Compile everything
-        run: sbt ++${{ matrix.SCALA_VERSION }} Test/compile
+        run: sbt -v ++${{ matrix.SCALA_VERSION }} Test/compile
 
       # Quick testing for PR validation
       - name: Validate pull request for JDK ${{ matrix.JABBA_JDK }}, Scala ${{ matrix.SCALA_VERSION }}
