--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
   publish-artifacts:
     name: Publish artifacts to Apache Nexus
     runs-on: ubuntu-latest
-    if: github.repository == 'apache/incubator-pekko-http'
+    if: github.repository == 'jrudolph/incubator-pekko-http'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
         run: sudo apt-get install -y graphviz
 
       - name: Publish to Apache Maven repo
-        run: sbt -jvm-opts .jvmopts-ci +publish
+        run: sbt --jvm-opts .jvmopts-ci +publish
         env:
           NEXUS_USER: ${{ secrets.NEXUS_USER }}
           NEXUS_PW: ${{ secrets.NEXUS_PW }}
@@ -55,7 +55,7 @@ jobs:
 
       - name: Build Documentation
         run: |-
-          sbt -jvm-opts .jvmopts-ci -Dpekko.genjavadoc.enabled=true docs/paradox unidoc
+          sbt --jvm-opts .jvmopts-ci -Dpekko.genjavadoc.enabled=true docs/paradox unidoc
 
       # Create directory structure upfront since rsync does not create intermediate directories otherwise
       - name: Create nightly directory structure
