--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,7 @@
 name: Publish nightly snapshots and documentation
 
 on:
+  pull_request:
   schedule:
     - cron: "0 3 * * *"
   workflow_dispatch:
